k8s/todo-app-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-web-app
  template:
    metadata:
      labels:
        app: todo-web-app
    spec:
      serviceAccountName: todo-app-sa # SA cluster-wide associazione
      containers:
      - name: web-app
        image: danielbellantuono/wiz-todo-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-web-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: todo-web-app

---
# Esposizione via Kubernetes Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-web-service
            port:
              number: 80

---
# Kube to AWS Route53
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  type: ExternalName
  externalName: mongodb.wiz.local
